--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <a href="/logs/new">Add new log</a>
+        <%- include('./partials/head.ejs')%>
     </head>
     <body>
-        <h1>Logs Index Page</h1>
-        <ul>
-            <% for(let i = 0; i < logs.length; i++) { %>
-            <li>
-                <a href="/logs/<%=logs[i].id; %>"> <%=logs[i].title;%></a><br />
+        <div class="container">
+            <h1>Logs Index Page</h1>
+            <ul>
+                <% for(let i = 0; i < logs.length; i++) { %>
+                <li>
+                    <a href="/logs/<%=logs[i].id; %>"> <%=logs[i].title;%></a
+                    ><br />
 
-                <a href="/logs/<%=logs[i].id; %>/edit">Edit Log</a>
-                <form
-                    action="/logs/<%=logs[i].id; %>?_method=DELETE"
-                    method="POST"
-                >
-                    <input type="submit" value="DELETE" />
-                </form>
-            </li>
-            <% } %>
-        </ul>
+                    <a href="/logs/<%=logs[i].id; %>/edit">Edit Log</a>
+                    <form
+                        action="/logs/<%=logs[i].id; %>?_method=DELETE"
+                        method="POST"
+                    >
+                        <input type="submit" value="DELETE" />
+                    </form>
+                </li>
+                <% } %>
+                <a href="/logs/new">Add new log</a>
+            </ul>
+        </div>
     </body>
 </html>
